# Unit3Dup

./: .editorconfig  .flake8  .gitignore  .readthedocs.yaml  404.html  COMPLETE_FEATURES.md  Contents.py  IMPROVEMENTS_PLAN.md  LICENSE  README.md  README.rst  [Template]service.env  autoupdate.py  autoupdate_0xx.py  botITT.py  console.config  imageHost.py  index.html  itt.back  itt.json  myTMDB.py  mypy.ini  preferences.cfg  preferences.py  pvtTorrent.py  pvtTracker.py  pvtVideo.py  pyproject.toml  requirements-dev.txt  requirements.txt  results.py  search.py  service.back  shaisl.json  sitemap.xml  start.py  start_test.py  utitlity.py
Docker/: dockerfile  unit3dup.bat  unit3dup.ps1  unit3dup.sh
Docker/windows/: dockerfile  unit3dup.ps1
Unit3Dup_2/: MediaFiles.py
commands/: index.html
common/: __init__.py  batch_processor.py  bdinfoOutput.py  bdinfo_string.py  bittorrent.py  command.py  config.py  config_manager.py  constants.py  custom_console.py  database.py  duplicate_detector.py  extractor.py  frames.py  image_uploader_resilient.py  logger.py  mediainfo.py  mediainfoOutput.py  mediainfo_string.py  notifications.py  p2p_tags.py  page.py  performance.py  qbitt.py  settings.py  tags.py  title.py  torrent_clients.py  upload_stats.py  utility.py
common/clients/: qbitt.py
config/: index.html
database/: itt.json  itt.py  trackers.py
docs/: ADDING_TRACKERS.md  conf.py  config.rst  docker.rst  force.rst  index.md  index.rst  main.rst  mkdocs.yml  noseed.rst  reseed.rst  watcher.rst  working_in_progress.rst
docs_old/: docker.rst  watcher.rst
guide/: index.html
install/: index.html
install_pyenv/: index.html
install_python/: index.html
install_ultra_cc/: index.html
it/: index.html
media_db/: results.py  search.py  tmdb.py
search/: search_index.json
tests/: __init__.py  basic.py  content_list.py  contents.py  dbonline.py  faketitle.py  game.py  games.py  mediainfo.py  movieshow.py  scan.py  show.py  test_bot.py  test_cli_commands.py  test_config_manager.py  test_duplicate_detector.py  test_logger.py  test_software_manager.py  test_upload_stats.py  tmdb.py  torrent.py  video.py  watcher.py
trackers/: itt.json  trackers.py
unit3d/: bot.py  imageHost.py  myTMDB.py  pvtTorrent.py  pvtVideo.py  search.py  uploader.py
unit3dup/: Contents.py  __init__.py  __main__.py  automode.py  bot.py  cli_commands.py  command.py  config.py  contents.py  dupe.py  duplicate.py  exceptions.py  files.py  freeimage.py  imageHost.py  media.py  mediavideo.py  myTMDB.py  payload.py  ping.py  pvtDocu.py  pvtTorrent.py  pvtTracker.py  pvtVideo.py  qbitt.py  qbittorrent.py  search.py  title.py  tmdb.py  torrent.py  upload.py  uploader.py  userinput.py  utility.py  utitlity.py
unit3dwebup/: index.html
view/: __init__.py  custom_console.py
web/: __init__.py  app.py
(+225 files in other folders)
