[tool.poetry]
name = "unit3dup"
version = "0.4.0"
description = "an Unit3D uploader"
authors = ["Parzival"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
guessit = "3.8.0"
pymediainfo = "6.1.0"
python-decouple = "3.8"
python-qbittorrent = "0.4.3"
requests = "2.32.3"
rich = "13.7.1"
torf = "4.2.7"
tqdm = "4.66.5"
thefuzz = "0.22.1"
tmdbv3api = "1.9.0"
unidecode = "1.3.8"
pillow-simd = "9.5.0.post1"

[tool.poetry.scripts]
unit3d_up = "start:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
