[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "Unit3Dup"
version = "0.8.23"
description = "An uploader for the Unit3D torrent tracker"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Parzival" }
]

[project.urls]
Homepage = "https://github.com/31December99/Unit3Dup"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs", "http_cache", "venv*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
unit3dup = "unit3dup.__main__:main"

# Black configuration
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | http_cache
)/
'''

# isort configuration (import sorting)
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/http_cache/*", "*/venv/*", "*/.venv/*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=unit3dup --cov=common --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
